// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAuditList/> should fetch events on mount and render a loading spinner 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Audit logs
    </h1>
    <div>
      <div
        class="d-flex flex-wrap float-right"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
            type="button"
          >
            <span>
              Team member
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-item-input dropdownItemInput dropdown-header"
              tabindex="-1"
            >
              <input
                class="form-control"
                placeholder="Search items..."
                type="text"
                value=""
              />
            </h6>
            <div
              class="dropdownDivider dropdown-divider"
              tabindex="-1"
            />
            <div
              class="content"
            >
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-1"
                >
                  <input
                    class="input"
                    id="checkbox-1"
                    name="checkbox-1"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-2"
                  >
                    agent 1
                  </span>
                </label>
              </div>
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-3"
                >
                  <input
                    class="input"
                    id="checkbox-3"
                    name="checkbox-3"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-4"
                  >
                    agent 2
                  </span>
                </label>
              </div>
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-5"
                >
                  <input
                    class="input"
                    id="checkbox-5"
                    name="checkbox-5"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-6"
                  >
                    agent3@gorgias.com
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
            type="button"
          >
            <span>
              All events
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-item-input dropdownItemInput dropdown-header"
              tabindex="-1"
            >
              <input
                class="form-control"
                placeholder="Search events..."
                type="text"
                value=""
              />
            </h6>
            <button
              class="component dropdown-item"
              role="menuitem"
              tabindex="0"
            >
              <div
                class="checkbox"
              >
                <label
                  class="label label quickSelectionOption"
                  for="checkbox-7"
                >
                  <input
                    class="input"
                    id="checkbox-7"
                    name="checkbox-7"
                    type="checkbox"
                  />
                  Select all
                  <div
                    class="badge"
                  >
                    1
                  </div>
                </label>
              </div>
            </button>
            <div
              class="dropdownDivider dropdown-divider"
              tabindex="-1"
            />
            <div
              class="content"
            >
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-8"
                >
                  <input
                    class="input"
                    id="checkbox-8"
                    name="checkbox-8"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-9"
                  >
                    Account created
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                calendar_today
              </i>
              <span
                class="wrapper"
              >
                October 1, 2018 12:00 AM - October 1, 2018 11:59 PM
                <i
                  class="material-icons icon isRight medium"
                >
                  arrow_drop_down
                </i>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="manage-requests-description"
    >
      <p>
        User audit logs display recent actions performed by users in Gorgias.
      </p>
    </div>
    <div>
      Loader
    </div>
  </div>
</div>
`;

exports[`<UserAuditList/> should render a message to inform the user no events are available 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Audit logs
    </h1>
    <div>
      <div
        class="d-flex flex-wrap float-right"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
            type="button"
          >
            <span>
              Team member
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-item-input dropdownItemInput dropdown-header"
              tabindex="-1"
            >
              <input
                class="form-control"
                placeholder="Search items..."
                type="text"
                value=""
              />
            </h6>
            <div
              class="dropdownDivider dropdown-divider"
              tabindex="-1"
            />
            <div
              class="content"
            >
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-10"
                >
                  <input
                    class="input"
                    id="checkbox-10"
                    name="checkbox-10"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-11"
                  >
                    agent 1
                  </span>
                </label>
              </div>
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-12"
                >
                  <input
                    class="input"
                    id="checkbox-12"
                    name="checkbox-12"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-13"
                  >
                    agent 2
                  </span>
                </label>
              </div>
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-14"
                >
                  <input
                    class="input"
                    id="checkbox-14"
                    name="checkbox-14"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-15"
                  >
                    agent3@gorgias.com
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
            type="button"
          >
            <span>
              All events
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-item-input dropdownItemInput dropdown-header"
              tabindex="-1"
            >
              <input
                class="form-control"
                placeholder="Search events..."
                type="text"
                value=""
              />
            </h6>
            <button
              class="component dropdown-item"
              role="menuitem"
              tabindex="0"
            >
              <div
                class="checkbox"
              >
                <label
                  class="label label quickSelectionOption"
                  for="checkbox-16"
                >
                  <input
                    class="input"
                    id="checkbox-16"
                    name="checkbox-16"
                    type="checkbox"
                  />
                  Select all
                  <div
                    class="badge"
                  >
                    1
                  </div>
                </label>
              </div>
            </button>
            <div
              class="dropdownDivider dropdown-divider"
              tabindex="-1"
            />
            <div
              class="content"
            >
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-17"
                >
                  <input
                    class="input"
                    id="checkbox-17"
                    name="checkbox-17"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-18"
                  >
                    Account created
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                calendar_today
              </i>
              <span
                class="wrapper"
              >
                October 1, 2018 12:00 AM - October 1, 2018 11:59 PM
                <i
                  class="material-icons icon isRight medium"
                >
                  arrow_drop_down
                </i>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="manage-requests-description"
    >
      <p>
        User audit logs display recent actions performed by users in Gorgias.
      </p>
    </div>
    <div>
      There is no event recorded matching these filters.
    </div>
  </div>
</div>
`;

exports[`<UserAuditList/> should render the fetched events and page navigation 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Audit logs
    </h1>
    <div>
      <div
        class="d-flex flex-wrap float-right"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
            type="button"
          >
            <span>
              Team member
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-item-input dropdownItemInput dropdown-header"
              tabindex="-1"
            >
              <input
                class="form-control"
                placeholder="Search items..."
                type="text"
                value=""
              />
            </h6>
            <div
              class="dropdownDivider dropdown-divider"
              tabindex="-1"
            />
            <div
              class="content"
            >
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-28"
                >
                  <input
                    class="input"
                    id="checkbox-28"
                    name="checkbox-28"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-29"
                  >
                    agent 1
                  </span>
                </label>
              </div>
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-30"
                >
                  <input
                    class="input"
                    id="checkbox-30"
                    name="checkbox-30"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-31"
                  >
                    agent 2
                  </span>
                </label>
              </div>
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-32"
                >
                  <input
                    class="input"
                    id="checkbox-32"
                    name="checkbox-32"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-33"
                  >
                    agent3@gorgias.com
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
            type="button"
          >
            <span>
              All events
            </span>
          </button>
          <div
            aria-hidden="true"
            class="dropdown dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-item-input dropdownItemInput dropdown-header"
              tabindex="-1"
            >
              <input
                class="form-control"
                placeholder="Search events..."
                type="text"
                value=""
              />
            </h6>
            <button
              class="component dropdown-item"
              role="menuitem"
              tabindex="0"
            >
              <div
                class="checkbox"
              >
                <label
                  class="label label quickSelectionOption"
                  for="checkbox-34"
                >
                  <input
                    class="input"
                    id="checkbox-34"
                    name="checkbox-34"
                    type="checkbox"
                  />
                  Select all
                  <div
                    class="badge"
                  >
                    1
                  </div>
                </label>
              </div>
            </button>
            <div
              class="dropdownDivider dropdown-divider"
              tabindex="-1"
            />
            <div
              class="content"
            >
              <div
                class="wrapperItem"
              >
                <label
                  class="label label labelItem"
                  for="checkbox-35"
                >
                  <input
                    class="input"
                    id="checkbox-35"
                    name="checkbox-35"
                    type="checkbox"
                  />
                  <span
                    id="label-tooltip-36"
                  >
                    Account created
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                calendar_today
              </i>
              <span
                class="wrapper"
              >
                October 1, 2018 12:00 AM - October 1, 2018 11:59 PM
                <i
                  class="material-icons icon isRight medium"
                >
                  arrow_drop_down
                </i>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="manage-requests-description"
    >
      <p>
        User audit logs display recent actions performed by users in Gorgias.
      </p>
    </div>
    <div>
      <table
        class="table"
      >
        <thead>
          <tr>
            <th>
              Team member
            </th>
            <th>
              Event
            </th>
            <th>
              Object
            </th>
            <th>
              Date
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle"
            >
              <div>
                <a
                  to="/app/settings/users/1"
                >
                  <div
                    class="component square d-inline-block"
                    style="width: 26px; height: 26px;"
                  >
                    <div
                      class="initials"
                      style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
                    >
                      <span
                        style="line-height: 28px;"
                      >
                        a1
                      </span>
                    </div>
                  </div>
                   
                  agent 1
                </a>
              </div>
            </td>
            <td
              class="link-full-td align-middle"
            >
              <div
                class="cell-content"
              />
            </td>
            <td
              class="link-full-td align-middle"
            >
              <div
                class="cell-content"
              >
                <a
                  to="/app/ticket/10/"
                >
                  Ticket #10
                </a>
              </div>
            </td>
            <td
              class="smallest link-full-td"
            >
              <div
                class="cell-content"
              >
                <span>
                  <span
                    id="datetime-tooltip-37"
                  >
                    January 25, 2022 10:39 AM
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              <div>
                <a
                  to="/app/settings/users/1"
                >
                  <div
                    class="component square d-inline-block"
                    style="width: 26px; height: 26px;"
                  >
                    <div
                      class="initials"
                      style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
                    >
                      <span
                        style="line-height: 28px;"
                      >
                        a1
                      </span>
                    </div>
                  </div>
                   
                  agent 1
                </a>
              </div>
            </td>
            <td
              class="link-full-td align-middle"
            >
              <div
                class="cell-content"
              />
            </td>
            <td
              class="link-full-td align-middle"
            >
              <div
                class="cell-content"
              >
                Macro #20
              </div>
            </td>
            <td
              class="smallest link-full-td"
            >
              <div
                class="cell-content"
              >
                <span>
                  <span
                    id="datetime-tooltip-38"
                  >
                    January 25, 2022 10:39 AM
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              <div>
                <a
                  to="/app/settings/users/1"
                >
                  <div
                    class="component square d-inline-block"
                    style="width: 26px; height: 26px;"
                  >
                    <div
                      class="initials"
                      style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
                    >
                      <span
                        style="line-height: 28px;"
                      >
                        a1
                      </span>
                    </div>
                  </div>
                   
                  agent 1
                </a>
              </div>
            </td>
            <td
              class="link-full-td align-middle"
            >
              <div
                class="cell-content"
              />
            </td>
            <td
              class="link-full-td align-middle"
            >
              <div
                class="cell-content"
              >
                View #30
              </div>
            </td>
            <td
              class="smallest link-full-td"
            >
              <div
                class="cell-content"
              >
                <span>
                  <span
                    id="datetime-tooltip-39"
                  >
                    January 25, 2022 10:39 AM
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <span
        class="group horizontal"
      >
        <button
          aria-disabled="true"
          class="wrapper wrapper fill secondary medium left isDisabled"
          id="prev-btn"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            keyboard_arrow_left
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper wrapper fill secondary medium right"
          id="next-btn"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            keyboard_arrow_right
          </i>
        </button>
      </span>
    </div>
  </div>
</div>
`;
